<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvTell"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUser"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDetails"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <EditText
        android:id="@+id/ptFirst"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptFirst"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/ptLast"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptLast"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptFirst"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/ptEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptLast"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/ptPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptPass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptEmail"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/ptConfirm"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptConfirm"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptPassword"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/ptPhone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:ems="10"
        android:hint="@string/ptPhone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptConfirm"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBFBFB"
        android:text="@string/btnCreate"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptPhone"
        app:layout_constraintVertical_bias="0.361" />

    <ProgressBar
        android:id="@+id/pbSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>